--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -4,7 +4,8 @@
 .wp-block-crown-blocks-container-featured-image.alignfull,
 .wp-block-crown-blocks-promo.alignfull,
 .wp-block-crown-blocks-call-to-action.alignfull,
-.wp-block-crown-blocks-section-nav.alignfull {
+.wp-block-crown-blocks-section-nav.alignfull,
+.wp-block-crown-blocks-event-header {
 	+ .wp-block-crown-blocks-container.alignfull,
 	+ .wp-block-crown-blocks-container-featured-image.alignfull,
 	+ .wp-block-crown-blocks-promo.alignfull,
@@ -2219,5 +2220,58 @@
 		@include media-breakpoint-up(lg) {
 			width: percentage(1 / 3);
 		}
+	}
+}
+
+
+/*	Event Header
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-event-header {
+	color: #fff;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	margin-left: -#{map-get($container-padding-x, xs)};
+	margin-right: -#{map-get($container-padding-x, xs)};
+	@include media-breakpoint-up(sm) {
+		margin-left: -#{map-get($container-padding-x, sm)};
+		margin-right: -#{map-get($container-padding-x, sm)};
+	}
+	@include media-breakpoint-up(md) {
+		margin-left: -#{map-get($container-padding-x, md)};
+		margin-right: -#{map-get($container-padding-x, md)};
+	}
+	@media (min-width: #{(900px + map-get($container-padding-x-px, md) * 2)}) {
+		margin-left: calc((100vw - 900px) / -2);
+		margin-right: calc((100vw - 900px) / -2);
+	}
+	> .header-bg {
+		background-color: $primary;
+		background: linear-gradient(to bottom left, $primary, $red);
+	}
+	> .inner > .header-contents {
+		@each $breakpoint, $padding-x in $container-padding-x {
+			@include media-breakpoint-up($breakpoint, $grid-breakpoints) {
+				padding-left: $padding-x;
+				padding-right: $padding-x;
+			}
+		}
+	}
+	.index-title {
+		font-family: $font-family-sans-serif-alt;
+	}
+	.article-header {
+		> .container-bg {
+			background-color: $blue;
+		}
+	}
+	.entry-categories {
+		span {
+			border-color: $primary;
+		}
+	}
+	.entry-title {
+		font-family: $font-family-base;
 	}
 }
