--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -66,7 +66,8 @@ body {
 .block-editor-block-list__block[data-type="crown-blocks/container-featured-image"][data-align="full"],
 .block-editor-block-list__block[data-type="crown-blocks/promo"][data-align="full"],
 .block-editor-block-list__block[data-type="crown-blocks/call-to-action"][data-align="full"],
-.block-editor-block-list__block[data-type="crown-blocks/section-nav"][data-align="full"] {
+.block-editor-block-list__block[data-type="crown-blocks/section-nav"][data-align="full"],
+.wp-block[data-type="crown-blocks/event-header"] {
 	+ .block-editor-block-list__block[data-type="crown-blocks/container"][data-align="full"],
 	+ .block-editor-block-list__block[data-type="crown-blocks/container-featured-image"][data-align="full"],
 	+ .block-editor-block-list__block[data-type="crown-blocks/promo"][data-align="full"],
