--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -15491,6 +15491,35 @@ form.feed-filters {
           padding: 0;
           border-radius: 0;
           font-size: 1.5rem; }
+    form.feed-filters ul.options.month {
+      margin: 0 -.5rem -.75rem; }
+      form.feed-filters ul.options.month li.option {
+        margin: 0 .5rem .75rem; }
+        form.feed-filters ul.options.month li.option.past input:checked + .label {
+          color: rgba(35, 48, 83, 0.5);
+          border-color: rgba(35, 48, 83, 0.5); }
+        form.feed-filters ul.options.month li.option.past label:hover .label {
+          color: rgba(35, 48, 83, 0.5); }
+        form.feed-filters ul.options.month li.option.past label .label {
+          color: rgba(35, 48, 83, 0.25); }
+        form.feed-filters ul.options.month li.option input:checked + .label {
+          background-color: transparent;
+          color: #233053;
+          border-color: #233053; }
+        form.feed-filters ul.options.month li.option label:hover .label {
+          background-color: transparent;
+          color: #233053; }
+        form.feed-filters ul.options.month li.option label .label {
+          color: rgba(35, 48, 83, 0.75);
+          border: none;
+          border-bottom: 3px solid transparent;
+          padding: 0;
+          padding-bottom: 0.25rem;
+          border-radius: 0;
+          font-size: 1.5rem;
+          text-transform: none;
+          -webkit-transition: background-color .15s, color .15s, border-color .15s;
+          transition: background-color .15s, color .15s, border-color .15s; }
     form.feed-filters ul.options li.option {
       margin: 0 .25rem .5rem;
       display: block; }
@@ -19898,6 +19927,66 @@ nav.pagination {
     border-color: #233053; }
   .wp-block-crown-blocks-event-header .entry-title {
     font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+
+/*	Event Index
+---------------------------------------------------------*/
+.wp-block-crown-blocks-event-index article.type-event:nth-child(2n-1) a {
+  background-color: #F4F8FD; }
+
+.wp-block-crown-blocks-event-index article.type-event a {
+  display: block;
+  color: inherit;
+  padding: 2rem; }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-event-index article.type-event a {
+      padding: 2rem 3rem; } }
+  @supports (-webkit-text-stroke: black) {
+    .wp-block-crown-blocks-event-index article.type-event a:hover .entry-event-date .date {
+      color: #233053; }
+    .wp-block-crown-blocks-event-index article.type-event a .entry-event-date .date {
+      color: rgba(35, 48, 83, 0);
+      -webkit-text-stroke: 2px #233053;
+      -webkit-transition: color .2s;
+      transition: color .2s; } }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-event-index article.type-event a > .inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; } }
+
+.wp-block-crown-blocks-event-index article.type-event .entry-event-date-container {
+  margin-bottom: 1rem; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-event-index article.type-event .entry-event-date-container {
+      width: 13rem;
+      margin-bottom: 0;
+      margin-right: 1rem; } }
+
+@media (min-width: 992px) {
+  .wp-block-crown-blocks-event-index article.type-event .entry-teaser {
+    width: calc(100% - 13rem - 1rem); } }
+
+.wp-block-crown-blocks-event-index article.type-event .entry-header {
+  margin-bottom: 0.5rem; }
+
+.wp-block-crown-blocks-event-index article.type-event .entry-centers {
+  margin-bottom: 1rem; }
+  .wp-block-crown-blocks-event-index article.type-event .entry-centers span {
+    display: inline-block;
+    line-height: 1.2;
+    font-weight: 700;
+    font-size: 0.625rem;
+    letter-spacing: .05em;
+    text-transform: uppercase;
+    border-radius: 10rem;
+    border: 1px solid #233053;
+    padding: .5rem .75rem; }
+
+.wp-block-crown-blocks-event-index article.type-event .entry-title {
+  margin-bottom: 0; }
 
 #header {
   background-color: transparent;
