--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2275,3 +2275,76 @@
 		font-family: $font-family-base;
 	}
 }
+
+
+/*	Event Index
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-event-index {
+	article.type-event {
+		&:nth-child(2n-1) {
+			a {
+				background-color: $x-light-blue;
+			}
+		}
+		a {
+			display: block;
+			color: inherit;
+			padding: 2rem;
+			@include media-breakpoint-up(xl) {
+				padding: 2rem 3rem;
+			}
+			@supports (-webkit-text-stroke: black) {
+				&:hover {
+					.entry-event-date .date {
+						color: $primary;
+					}
+				}
+				.entry-event-date .date {
+					color: rgba($primary, 0);
+					-webkit-text-stroke: 2px $primary;
+					transition: color .2s;
+				}
+			}
+			> .inner {
+				@include media-breakpoint-up(lg) {
+					display: flex;
+					align-items: center;
+				}
+			}
+		}
+		.entry-event-date-container {
+			margin-bottom: 1rem;
+			@include media-breakpoint-up(lg) {
+				width: 13rem;
+				margin-bottom: 0;
+				margin-right: 1rem;
+			}
+		}
+		.entry-teaser {
+			@include media-breakpoint-up(lg) {
+				width: calc(100% - 13rem - 1rem);
+			}
+		}
+		.entry-header {
+			margin-bottom: 0.5rem;
+		}
+		.entry-centers {
+			margin-bottom: 1rem;
+			span {
+				display: inline-block;
+				line-height: 1.2;
+				font-weight: 700;
+				font-size: 0.625rem;
+				letter-spacing: .05em;
+				text-transform: uppercase;
+				border-radius: 10rem;
+				border: 1px solid $primary;
+				padding: .5rem .75rem;
+			}
+		}
+		.entry-title {
+			margin-bottom: 0;
+		}
+	}
+}
