--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
@@ -351,6 +351,48 @@ form.feed-filters {
 				}
 			}
 		}
+		&.month {
+			margin: 0 -.5rem -.75rem;
+			li.option {
+				margin: 0 .5rem .75rem;
+				&.past {
+					input:checked + .label {
+						color: rgba($primary, .5);
+						border-color: rgba($primary, .5);
+					}
+					label {
+						&:hover .label {
+							color: rgba($primary, .5);
+						}
+						.label {
+							color: rgba($primary, .25);
+						}
+					}
+				}
+				input:checked + .label {
+					background-color: transparent;
+					color: $primary;
+					border-color: $primary;
+				}
+				label {
+					&:hover .label {
+						background-color: transparent;
+						color: rgba($primary, 1);
+					}
+					.label {
+						color: rgba($primary, .75);
+						border: none;
+						border-bottom: 3px solid transparent;
+						padding: 0;
+						padding-bottom: 0.25rem;
+						border-radius: 0;
+						font-size: 1.5rem;
+						text-transform: none;
+						transition: background-color .15s, color .15s, border-color .15s;
+					}
+				}
+			}
+		}
 		li.option {
 			margin: 0 .25rem .5rem;
 			display: block;
