--- a/wp-content/plugins/crown-blocks/src/block-client-story-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-client-story-header/style.scss
@@ -96,6 +96,9 @@
 		@media (min-width: 768px) {
 			font-size: 1.5rem;
 		}
+		@media (min-width: 1200px) {
+			font-size: 1.875rem;
+		}
 	}
 	
 	.social-sharing-links {
